--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "matrix-lock",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "build": "webpack",
+    "build": "ncc build src/main.js -o dist/main --license licenses.txt; ncc build src/post.js -o dist/post --license licenses.txt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +15,6 @@
     "@actions/core": "^1.10.1"
   },
   "devDependencies": {
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "@vercel/ncc": "^0.38.1"
   }
 }
